# ltu-cmass

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  borglpt2gal.py  custom.job  global.cfg  inference.ipynb  latin_hypercube_params_bonus.txt  lpt2nbody.ipynb  preprocess.ipynb  requirements-extras.txt  requirements.txt  rho_to_gal.py  run_borg2lpt_var.py  run_borglpt.py  scratch.ipynb  setup.cfg  submit_borg.pbs  submit_borg2lpt_array.pbs  test.py  workspace.ipynb  workspace_sim.ipynb
data_accounting/: anvil.txt  bridges.txt  delta.txt  manifest.tsv  parse_counts.py
docs/: DATA.md  INSTALL.md  inference_pipeline.md  pypower_periodic_box_migration.md
gals_to_summaries/: apply_survey.py  calc_Pk_nbkit.py
jobs/: apply_hod.job  bias_and_survey.sh  borg3gpch.sh  borglpt.job  check_globus_sync.sh  clean_galaxies.sh  custom.job  fastpm.sh  fit_halo_bias.job  full_run.job  infer_quijote.sh  interactive_inference_cpu.sh  interactive_slurm_inference_cpu.sh  job_100.pbs  make_npe_yaml.py  make_sym_simdir.sh  make_symlinks.py  mpiborg.sh  mpiborg_1gpch.sh  mpiborg_2gpch.sh  offload_globus_bridges2.sh  pinocchio_2gpch.sh  pinocchio_3gpc.sh  pinocchio_quijote.sh  pinocchio_quijote_0_249.sh  pinocchio_quijote_1.sh  pinocchio_quijote_1000_1249.sh  pinocchio_quijote_1250_1499.sh  pinocchio_quijote_1500_1749.sh  pinocchio_quijote_1750_1999.sh  pinocchio_quijote_2.sh  pinocchio_quijote_250_499.sh  pinocchio_quijote_3.sh  pinocchio_quijote_4.sh  pinocchio_quijote_500_749.sh  pinocchio_quijote_750_999.sh  pmwd.job  remap_as_cuboid.job  rho_to_halo.job  run_calib1gpch.sh  (+53 more)
nbody/: simulate_borg2lpt.py  simulate_jax2lpt.py  simulate_pmwd.py
notebooks/: build_custom_hod_prior.ipynb  cmass  compare_gravity_models.ipynb  composite_hod_prior.ipynb  compute_nbar.ipynb  constrain_hod_prior.ipynb  cosmo_latin_hypercube.ipynb  fastpm.ipynb  fit_box_geometry.ipynb  interpolate_hod.ipynb  load_inference.ipynb  net_hyperparameters.ipynb  nz_observed.ipynb  pinocchio.ipynb  port_abacus.ipynb  port_quijote.ipynb  port_quijote3gpch.ipynb  preprocess.ipynb  process_observe.ipynb  self_consistent_inference.ipynb
obs_to_summaries/: apply_survey.py  calc_Pk_nbkit.py
old/: borglpt2gal.ipynb
params/: README.txt  (+6 more)
(+347 files in other folders)
