[metadata]
name = cmass
version = 0.0.0
description = python code for approximate simulations of CMASS-NGC

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    scikit-learn
    pandas
    astropy
    colossus
    pymangle
    tqdm
    hydra-core
    Pylians
    pmwd @ git+https://github.com/eelregit/pmwd.git
    cuboid_remap @ git+https://github.com/maho3/cuboid_remap_jax.git
    pypower @ git+https://github.com/cosmodesi/pypower.git
