[metadata]
name = cmass
version = 0.0.0
description = python code for approximate simulations of CMASS-NGC

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy<2.0.0
    scipy<1.14.0
    scikit-learn
    pandas
    astropy
    pymangle
    tqdm
    hydra-core
    Pylians
    torch
    colossus
    halotools
    bigfile
    pybind11
    pmwd @ git+https://github.com/maho3/pmwd.git
    cuboid_remap @ git+https://github.com/maho3/cuboid_remap_jax.git
    pypower @ git+https://github.com/cosmodesi/pypower.git
    BFast @ git+https://github.com/tsfloss/BFast.git

[options.extras_require]
camb = 
    camb
syren = 
    symbolic_pofk @ git+https://github.com/DeaglanBartlett/symbolic_pofk.git
charm = 
    charm @ git+https://github.com/shivampcosmo/CHARM.git

[flake8]
max-line-length = 80

[pep8]
max-line-length = 80
